--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,35 +12,51 @@
             font-family: 'Outfit', sans-serif;
             background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
         }
+
         .glass {
             background: rgba(255, 255, 255, 0.05);
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
+
         .input-glass {
             background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(255, 255, 255, 0.1);
             color: white;
         }
+
         .input-glass:focus {
-             border-color: #6366f1;
-             outline: none;
-             background: rgba(255, 255, 255, 0.1);
+            border-color: #6366f1;
+            outline: none;
+            background: rgba(255, 255, 255, 0.1);
         }
     </style>
 </head>
+
 <body class="h-screen flex items-center justify-center overflow-hidden">
+    <script>
+        // Check session immediately
+        if (localStorage.getItem('isAuthenticated') === 'true') {
+            window.location.href = '/dashboard.html';
+        }
+    </script>
 
     <!-- Decorative Elements -->
-    <div class="absolute top-[-20%] left-[-10%] w-[500px] h-[500px] bg-indigo-600 rounded-full blur-[120px] opacity-30"></div>
-    <div class="absolute bottom-[-20%] right-[-10%] w-[500px] h-[500px] bg-purple-600 rounded-full blur-[120px] opacity-30"></div>
+    <div class="absolute top-[-20%] left-[-10%] w-[500px] h-[500px] bg-indigo-600 rounded-full blur-[120px] opacity-30">
+    </div>
+    <div
+        class="absolute bottom-[-20%] right-[-10%] w-[500px] h-[500px] bg-purple-600 rounded-full blur-[120px] opacity-30">
+    </div>
 
     <div class="glass p-10 rounded-2xl w-full max-w-md mx-4 relative z-10 shadow-2xl">
         <div class="text-center mb-8">
-            <div class="w-16 h-16 bg-gradient-to-tr from-indigo-500 to-purple-500 rounded-xl mx-auto flex items-center justify-center mb-4 shadow-lg shadow-indigo-500/30">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
+            <div
+                class="w-16 h-16 bg-gradient-to-tr from-indigo-500 to-purple-500 rounded-xl mx-auto flex items-center justify-center mb-4 shadow-lg shadow-indigo-500/30">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z" />
                 </svg>
             </div>
             <h1 class="text-3xl font-bold text-white mb-2">Superadmin</h1>
@@ -49,13 +66,17 @@
         <form id="loginForm" class="space-y-6">
             <div>
                 <label class="block text-sm font-medium text-slate-300 mb-2">Username</label>
-                <input type="text" id="username" class="w-full px-4 py-3 rounded-xl input-glass transition-all" placeholder="Enter username" required>
+                <input type="text" id="username" class="w-full px-4 py-3 rounded-xl input-glass transition-all"
+                    placeholder="Enter username" required>
             </div>
             <div>
                 <label class="block text-sm font-medium text-slate-300 mb-2">Password</label>
-                <input type="password" id="password" class="w-full px-4 py-3 rounded-xl input-glass transition-all" placeholder="Enter password" required>
+                <input type="password" id="password" class="w-full px-4 py-3 rounded-xl input-glass transition-all"
+                    placeholder="Enter password" required>
             </div>
-            <button type="submit" class="w-full py-3.5 bg-gradient-to-r from-indigo-500 to-purple-600 hover:from-indigo-600 hover:to-purple-700 text-white font-semibold rounded-xl transition-all shadow-lg hover:shadow-indigo-500/25 transform hover:-translate-y-0.5" id="loginBtn">
+            <button type="submit"
+                class="w-full py-3.5 bg-gradient-to-r from-indigo-500 to-purple-600 hover:from-indigo-600 hover:to-purple-700 text-white font-semibold rounded-xl transition-all shadow-lg hover:shadow-indigo-500/25 transform hover:-translate-y-0.5"
+                id="loginBtn">
                 Sign In
             </button>
         </form>
@@ -104,4 +125,5 @@
         });
     </script>
 </body>
+
 </html>
