--- a/public/contacts.html
+++ b/public/contacts.html
@@ -117,7 +117,7 @@
     <script>
         lucide.createIcons();
         const API_KEY = 'CSApp2024SecretKey!@#$';
-        if (!localStorage.getItem('isAuthenticated')) window.location.href = '/index.html';
+        if (!localStorage.getItem('isAuthenticated')) window.location.href = '/login.html';
 
         let allContacts = [];
 
