--- a/public/settings.html
+++ b/public/settings.html
@@ -131,7 +131,7 @@
 
     <script>
         lucide.createIcons();
-        if (!localStorage.getItem('isAuthenticated')) window.location.href = '/index.html';
+        if (!localStorage.getItem('isAuthenticated')) window.location.href = '/login.html';
     </script>
 </body>
 
